common.less: Fix `.add-filter-form` vertical alignment

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -146,6 +146,8 @@
 .add-filter-form {
   text-align: center;
   width: auto;
+  position: relative;
+  bottom: calc(~"-.5em - 1px");
 }
 
 .add-filter-form:after {
